--- a/notebooks/processing_dataset.ipynb
+++ b/notebooks/processing_dataset.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Clearing data\n",
     "\n",
-    "Because of some reason generated text didn't fit into parser expectations. Se we need find this promts and regenerate them."
+    "Some reason generated text didn't fit into parser expectations so we need find this promts and regenerate them."
    ]
   },
   {
