--- a/notebooks/samples_generator.ipynb
+++ b/notebooks/samples_generator.ipynb
@@ -125,6 +125,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# facebook/opt-1.3b\n",
+    "# facebook/opt-2.7b\n",
+    "# facebook/opt-125m\n",
+    "# meta-llama/Llama-2-7b-chat-hf\n",
+    "# meta-llama/Llama-2-13b-chat-hf\n",
     "MODEL_PATH = \"\""
    ]
   },
