--- a/notebooks/samples_generator.ipynb
+++ b/notebooks/samples_generator.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promts_df = dataset['train'].to_pandas()"
+    "base_df = dataset['train'].to_pandas()"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promts_df = promts_df.drop(promts_df[promts_df.index >= 1000].index)"
+    "base_df = base_df.drop(base_df[base_df.index >= 1000].index)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promts_df = promts_df[['id', 'prompt']]"
+    "base_df = base_df[['id', 'prompt']]"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promts_df['generated'] = ''"
+    "base_df['generated'] = ''"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promts_df.to_csv('base.csv')"
+    "base_df.to_csv('base.csv')"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseDF = pd.read_csv('base.csv')"
+    "base_df = pd.read_csv('base.csv')"
    ]
   },
   {
@@ -272,14 +272,14 @@
    "source": [
     "from tqdm import tqdm\n",
     "errors = []\n",
-    "for index, row in tqdm(iterable = baseDF.iterrows(), desc=f\"Processing model {MODEL_PATH}\", total=baseDF.shape[0]):\n",
+    "for index, row in tqdm(iterable = base_df.iterrows(), desc=f\"Processing model {MODEL_PATH}\", total=base_df.shape[0]):\n",
     "    try:\n",
     "        prompt = row['prompt']\n",
     "        inputs = tokenizer.encode(prompt, return_tensors=\"pt\").to(\"cuda\")\n",
     "        outputs = base_model.generate(inputs, max_length=500)\n",
     "        generated_text = generate_text(prompt)\n",
     "        generated_text = extract_response(generated_text)\n",
-    "        baseDF.loc[index, 'generated'] = generated_text\n",
+    "        base_df.loc[index, 'generated'] = generated_text\n",
     "    except Exception as e:\n",
     "        errors.append(e)\n",
     "        continue"
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseDF.to_csv('Llama-2-13b-chat-hf.csv')"
+    "base_df.to_csv('Llama-2-13b-chat-hf.csv')"
    ]
   }
  ],
